--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
@@ -13,52 +13,52 @@
     <header> 
         <!-- навигация в Header-->
         <nav>
-            <a href="/">WebStudio</a>
-            <ul>
-                <li><a href="#">Студия</a></li>
-                <li><a href="#">Портфолио</a></li>
-                <li><a href="#">Контакты</a></li>
+            <a href="#" class="link"><span class="web">Web</span><span class="studio">Studio</span></a>
+            <ul class="site-nav list">
+                <li><a href="#" class="link current">Студия</a></li>
+                <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+                <li><a href="#" class="link">Контакты</a></li>
             </ul>
         </nav>
-        <a href="info@devstudio.com">info@devstudio.com</a>
-        <a href="+380961111111">+38 096 111 11 11</a> 
+        <a href="info@devstudio.com" class="adress-header link">info@devstudio.com</a>
+        <a href="+380961111111" class="adress-header link">+38 096 111 11 11</a> 
     </header>
    
     <main>
         <!-- Cекция Герой-->
-        <section>
-            <h1>Эффективные решения<br>
+        <section class="hero">
+            <h1 class="hero-title">Эффективные решения<br>
                 для вашего бизнеса</h1>
-            <button type="button">Заказать услугу</button>
+            <button type="button" class="button-hero">Заказать услугу</button>
         </section>
         
         <!-- Секция Сильные стороны-->
-        <section>
-            <h2>Сильные стороны</h2> <!-- Скрытый заголовок-->
-            <ul>
+        <section class="section">
+            <h2 class="section-title">Сильные стороны</h2> <!-- Скрытый заголовок-->
+            <ul class="advantages list">
                 <li>
-                    <h3>Внимание к деталям</h3>
+                    <h3 class="title">Внимание к деталям</h3>
                     <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li>
-                    <h3>Пунктуальность</h3>
+                    <h3 class="title">Пунктуальность</h3>
                     <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li>
-                    <h3>Планирование</h3>
+                    <h3 class="title">Планирование</h3>
                     <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li>
-                    <h3>Современные</h3>
+                    <h3 class="title">Современные</h3>
                     <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>      
         </section>
         
         <!-- Секция Чем мы занимаемся-->
-        <section>
-            <h2>Чем мы занимаемся</h2>
-            <ul>
+        <section class="section">
+            <h2 class="section-title">Чем мы занимаемся</h2>
+            <ul class="list">
                 <li>
                     <a href="/"><img src="./images/img-1.jpg" alt="делаем верстку" width="370"/></a>
                 </li>
@@ -72,27 +72,27 @@
         </section>
 
         <!-- Секция Наша команда-->
-        <section>
-            <h2>Наша команда</h2>
-            <ul>
+        <section class="section">
+            <h2 class="section-title">Наша команда</h2>
+            <ul class="employer list">
                 <li>
                     <img src="./images/img-team-1.jpg" alt="главный дизайнер" width="270"/>
-                    <h3>Игорь Демьяненко</h3>
+                    <h3 class="title">Игорь Демьяненко</h3>
                     <p lang="en">Product Designer</p>
                 </li>
                 <li>
                     <img src="./images/img-team-2.jpg" alt="фрондэенд разработчик" width="270"/>
-                    <h3>Ольга Репина</h3>
+                    <h3 class="title">Ольга Репина</h3>
                     <p lang="en">Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./images/img-team-3.jpg" alt="маркетинг" width="270"/>
-                    <h3>Николай Тарасов</h3>
+                    <h3 class="title">Николай Тарасов</h3>
                     <p lang="en">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/img-team-4.jpg" alt="дизайнер" width="270"/>
-                    <h3>Михаил Ермаков</h3>
+                    <h3 class="title">Михаил Ермаков</h3>
                     <p lang="en">UI Designer</p>
                 </li>
             </ul>
@@ -100,11 +100,11 @@
     </main>
     <!-- Подвал -->
     <footer>
-        <a href="/">WebStudio</a>
+        <a href="#" class="link"> <span class="web">Web</span><span class="studio-footer">Studio</span></a>
         <address>
-            г. Киев, пр-т Леси Украинки, 26<br/>
-            <a href="info@example.com">info@example.com</a><br/>
-            <a href="+380991111111">+38 099 111 11 11</a><br/>
+            <span class="adress">г. Киев, пр-т Леси Украинки, 26</span><br/>
+            <a href="info@example.com" class="adress-footer link">info@example.com</a><br/>
+            <a href="+380991111111" class="adress-footer link">+38 099 111 11 11</a><br/>
         </address>
     </footer>
 </body>
