--- a/portfolio.html
+++ b/portfolio.html
@@ -9,6 +9,42 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
 </head>
 <body>
-    
+    <header>
+        <!-- навигация в Header-->
+        <nav>
+            <a href="#" class="link"><span class="web">Web</span><span class="studio">Studio</span></a>
+            <ul class="site-nav list">
+                <li><a href="./index.html" class="link">Студия</a></li>
+                <li><a href="#" class="link current">Портфолио</a></li>
+                <li><a href="#" class="link">Контакты</a></li>
+            </ul>
+        </nav>
+        <a href="info@devstudio.com" class="adress-header link">info@devstudio.com</a>
+        <a href="+380961111111" class="adress-header link">+38 096 111 11 11</a>
+    </header>
+    <main>
+        <!-- Секция Герой -->
+        <section>
+            <h1>Портфолио</h1> <!-- Невидимый заголовок-->  
+            <h2>Навигация по работам</h2> <!-- Невидимый зголовок -->
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+              
+
+        </section>
+    </main>
+    <footer>
+        <a href="#" class="link"> <span class="web">Web</span><span class="studio-footer">Studio</span></a>
+        <address>
+            <span class="adress">г. Киев, пр-т Леси Украинки, 26</span><br />
+            <a href="info@example.com" class="adress-footer link">info@example.com</a><br />
+            <a href="+380991111111" class="adress-footer link">+38 099 111 11 11</a><br />
+        </address>
+    </footer>
 </body>
 </html>
