--- a/portfolio.html
+++ b/portfolio.html
@@ -27,14 +27,62 @@
         <section>
             <h1>Портфолио</h1> <!-- Невидимый заголовок-->  
             <h2>Навигация по работам</h2> <!-- Невидимый зголовок -->
-            <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+            <!-- Кнопки-->
+            <ul class="buttons list">
+                <li><button type="button" class="button">Все</button></li>
+                <li><button type="button" class="button">Веб-сайты</button></li>
+                <li><button type="button" class="button">Приложения</button></li>
+                <li><button type="button" class="button">Дизайн</button></li>
+                <li><button type="button" class="button">Маркетинг</button></li>
             </ul>
-              
+            <!-- Перечень работ -->
+            <ul class="project list">
+                <li>
+                    <a href="#"><img src="./images/port-1.jpg" alt="пример веб-сайта на ноутбуке" width="370"/></a>
+                    <h3 class="title">Технокряк</h3>
+                    <p>Веб-сайт</p>
+                </li>
+                <li>
+                    <a href="#"><img src="./images/port-2.jpg" alt="постер игры двух боскетболистов" width="370"/></a>
+                    <h3 class="title">Постер New Orlean vs Golden Star</h3>
+                    <p>Дизайн</p>
+                </li>
+                <li>
+                    <a href="#"><img src="./images/port-3.jpg" alt="логотип ресторана" width="370"/></a>
+                    <h3 class="title">Ресторан Seafood</h3>
+                    <p>Приложение</p>
+                </li>
+                <li>
+                    <a href="#"><img src="./images/port-4.jpg" alt="черыне наущники" width="370"/></a>
+                    <h3 class="title">Проект Prime</h3>
+                    <p>Маркетинг</p>
+                </li>
+                <li>
+                    <a href="#"><img src="./images/port-5.jpg" alt="две коробки разного размера" width="370"/></a>
+                    <h3 class="title">Проект Boxes</h3>
+                    <p>Приложение</p>
+                </li>
+                <li>
+                    <a href="#"><img src="./images/port-6.jpg" alt="примез отображения сайта на мониторе" width="370"/></a>
+                    <h3 class="title">Inspiration has no Borders</h3>
+                    <p>Веб-сайт</p>
+                </li>
+                <li>
+                    <a href="#"><img src="./images/port-7.jpg" alt="дизайн одной из страниц журнала" width="370"/></a>
+                    <h3 class="title">Издание Limited Edition</h3>
+                    <p>Дизайн</p>
+                </li>
+                <li>
+                    <a href="#"><img src="./images/port-8.jpg" alt="логотип проекта" width="370"/></a>
+                    <h3 class="title">Проект LAB</h3>
+                    <p>Маркетинг</p>
+                </li>
+                <li>
+                    <a href="#"><img src="./images/port-9.jpg" alt="работа за ноутбуком" width="370"/></a>
+                    <h3 class="title">Growing Business</h3>
+                    <p>Приложение</p>
+                </li>
+            </ul>
 
         </section>
     </main>
