--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./CSS/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./CSS/style.css">
+
     <link rel="preconnect" href="https://fonts.gstatic.com">
 </head>
 
@@ -13,7 +17,7 @@
     <header> 
         <!-- навигация в Header-->
         <nav>
-            <a href="#" class="link"><span class="web">Web</span><span class="studio">Studio</span></a>
+            <a href="#" class="logo link"><span class="web">Web</span><span class="studio">Studio</span></a>
             <ul class="site-nav list">
                 <li><a href="#" class="link current">Студия</a></li>
                 <li><a href="./portfolio.html" class="link">Портфолио</a></li>
@@ -38,19 +42,19 @@
             <ul class="advantages list">
                 <li>
                     <h3 class="title">Внимание к деталям</h3>
-                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                    <p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li>
                     <h3 class="title">Пунктуальность</h3>
-                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                    <p class="text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li>
                     <h3 class="title">Планирование</h3>
-                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                    <p class="text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li>
                     <h3 class="title">Современные</h3>
-                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                    <p class="text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>      
         </section>
@@ -72,35 +76,35 @@
         </section>
 
         <!-- Секция Наша команда-->
-        <section class="section">
+        <section class="section team">
             <h2 class="section-title">Наша команда</h2>
             <ul class="employer list">
                 <li>
                     <img src="./images/img-team-1.jpg" alt="главный дизайнер" width="270"/>
                     <h3 class="title">Игорь Демьяненко</h3>
-                    <p lang="en">Product Designer</p>
+                    <p lang="en" class="text">Product Designer</p>
                 </li>
                 <li>
                     <img src="./images/img-team-2.jpg" alt="фрондэенд разработчик" width="270"/>
                     <h3 class="title">Ольга Репина</h3>
-                    <p lang="en">Frontend Developer</p>
+                    <p lang="en" class="text">Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./images/img-team-3.jpg" alt="маркетинг" width="270"/>
                     <h3 class="title">Николай Тарасов</h3>
-                    <p lang="en">Marketing</p>
+                    <p lang="en" class="text">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/img-team-4.jpg" alt="дизайнер" width="270"/>
                     <h3 class="title">Михаил Ермаков</h3>
-                    <p lang="en">UI Designer</p>
+                    <p lang="en" class="text">UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
     <!-- Подвал -->
     <footer>
-        <a href="#" class="link"> <span class="web">Web</span><span class="studio-footer">Studio</span></a>
+        <a href="#" class=" logo link"> <span class="web">Web</span><span class="studio-footer">Studio</span></a>
         <address>
             <span class="adress">г. Киев, пр-т Леси Украинки, 26</span><br/>
             <a href="info@example.com" class="adress-footer link">info@example.com</a><br/>
