--- a/portfolio.html
+++ b/portfolio.html
@@ -4,15 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="./CSS/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./CSS/style.css">
+    
     <link rel="preconnect" href="https://fonts.gstatic.com">
 </head>
 <body>
     <header>
         <!-- навигация в Header-->
         <nav>
-            <a href="#" class="link"><span class="web">Web</span><span class="studio">Studio</span></a>
+            <a href="#" class="logo link"><span class="web">Web</span><span class="studio">Studio</span></a>
             <ul class="site-nav list">
                 <li><a href="./index.html" class="link">Студия</a></li>
                 <li><a href="#" class="link current">Портфолио</a></li>
@@ -23,7 +27,7 @@
         <a href="+380961111111" class="adress-header link">+38 096 111 11 11</a>
     </header>
     <main>
-        <!-- Секция Герой -->
+        <!-- Секция Герой2 -->
         <section>
             <h1>Портфолио</h1> <!-- Невидимый заголовок-->  
             <h2>Навигация по работам</h2> <!-- Невидимый зголовок -->
@@ -40,54 +44,54 @@
                 <li>
                     <a href="#"><img src="./images/port-1.jpg" alt="пример веб-сайта на ноутбуке" width="370"/></a>
                     <h3 class="title">Технокряк</h3>
-                    <p>Веб-сайт</p>
+                    <p class="text">Веб-сайт</p>
                 </li>
                 <li>
                     <a href="#"><img src="./images/port-2.jpg" alt="постер игры двух боскетболистов" width="370"/></a>
                     <h3 class="title">Постер New Orlean vs Golden Star</h3>
-                    <p>Дизайн</p>
+                    <p class="text">Дизайн</p>
                 </li>
                 <li>
                     <a href="#"><img src="./images/port-3.jpg" alt="логотип ресторана" width="370"/></a>
                     <h3 class="title">Ресторан Seafood</h3>
-                    <p>Приложение</p>
+                    <p class="text">Приложение</p>
                 </li>
                 <li>
                     <a href="#"><img src="./images/port-4.jpg" alt="черыне наущники" width="370"/></a>
                     <h3 class="title">Проект Prime</h3>
-                    <p>Маркетинг</p>
+                    <p class="text">Маркетинг</p>
                 </li>
                 <li>
                     <a href="#"><img src="./images/port-5.jpg" alt="две коробки разного размера" width="370"/></a>
                     <h3 class="title">Проект Boxes</h3>
-                    <p>Приложение</p>
+                    <p class="text">Приложение</p>
                 </li>
                 <li>
                     <a href="#"><img src="./images/port-6.jpg" alt="примез отображения сайта на мониторе" width="370"/></a>
                     <h3 class="title">Inspiration has no Borders</h3>
-                    <p>Веб-сайт</p>
+                    <p class="text">Веб-сайт</p>
                 </li>
                 <li>
                     <a href="#"><img src="./images/port-7.jpg" alt="дизайн одной из страниц журнала" width="370"/></a>
                     <h3 class="title">Издание Limited Edition</h3>
-                    <p>Дизайн</p>
+                    <p class="text">Дизайн</p>
                 </li>
                 <li>
                     <a href="#"><img src="./images/port-8.jpg" alt="логотип проекта" width="370"/></a>
                     <h3 class="title">Проект LAB</h3>
-                    <p>Маркетинг</p>
+                    <p class="text">Маркетинг</p>
                 </li>
                 <li>
                     <a href="#"><img src="./images/port-9.jpg" alt="работа за ноутбуком" width="370"/></a>
                     <h3 class="title">Growing Business</h3>
-                    <p>Приложение</p>
+                    <p class="text">Приложение</p>
                 </li>
             </ul>
 
         </section>
     </main>
     <footer>
-        <a href="#" class="link"> <span class="web">Web</span><span class="studio-footer">Studio</span></a>
+        <a href="#" class="logo link"> <span class="web">Web</span><span class="studio-footer">Studio</span></a>
         <address>
             <span class="adress">г. Киев, пр-т Леси Украинки, 26</span><br />
             <a href="info@example.com" class="adress-footer link">info@example.com</a><br />
